@@ -44,6 +44,7 @@
 - wait submount expire thread completion.
 - add missing uris list locking.
 - fix segv during library re-open.
+- fix incorrect pthreads condition handling for expire requests.
  
 14/01/2008 autofs-5.0.3
 -----------------------
